syntax = "proto3";
package proto.MasterServerApi;
option go_package = "proto/MasterServerApi";

message KeeperAddReq {
    string session_id                             = 1;
    string name                                   = 2;
    string keeper_url                             = 3;
}

message KeeperAddResp {
    string session_id                             = 1;
    string status                                 = 2;
}

message KeeperSyncReq {
    string session_id                             = 1;
    repeated bytes pack_msg                       = 2;
}

message KeeperSyncResp {
    string session_id                             = 1;
    repeated bytes pack_msg                       = 2;
}

service MasterServiceApi {
    rpc KeeperAdd (KeeperAddReq) returns (KeeperAddResp) {}
    rpc KeeperSync (KeeperSyncReq) returns (KeeperSyncResp) {}
}